--- a/artifacts/pruebas.ipynb
+++ b/artifacts/pruebas.ipynb
@@ -50,6 +50,38 @@
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "array([[-1.42299198,  0.        ,  0.        , ...,  1.        ,\n",
+       "         0.        ,  1.        ],\n",
+       "       [ 0.3068899 ,  0.        ,  0.        , ...,  1.        ,\n",
+       "         1.        ,  0.        ],\n",
+       "       [ 1.25046184,  0.        ,  1.        , ...,  1.        ,\n",
+       "         1.        ,  0.        ],\n",
+       "       ...,\n",
+       "       [-0.32215806,  0.        ,  0.        , ...,  0.        ,\n",
+       "         0.        ,  1.        ],\n",
+       "       [ 0.3068899 ,  0.        ,  0.        , ...,  1.        ,\n",
+       "         0.        ,  1.        ],\n",
+       "       [ 0.3068899 ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         1.        ,  0.        ]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_feature_train_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
